--- a/legal.html
+++ b/legal.html
@@ -29,7 +29,12 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="our-privacy-policy" class="anchor" href="#our-privacy-policy"><span class="octicon octicon-link"></span></a>our privacy policy</h1>
+<a name="terms-of-service" class="anchor" href="#terms-of-service"><span class="octicon octicon-link"></span></a>terms of service</h1>
+
+<p>Our software is distributed on an "as is" basis, without warranties or conditions of any kind, either express or implied.</p>
+
+          <h1>
+<a name="privacy-policy" class="anchor" href="#privacy-policy"><span class="octicon octicon-link"></span></a>privacy policy</h1>
 
 <p>Before or at the time of collecting personal information, we will identify the purposes for which information is being collected. We collect only the information required to fulfill those purposes specified by us.</p>
 
