Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,53 +29,60 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="our-apps" class="anchor" href="#our-apps"><span class="octicon octicon-link"></span></a>our apps</h1>
+<a id="our-apps" class="anchor" href="#our-apps" aria-hidden="true"><span class="octicon octicon-link"></span></a>our apps</h1>
 
 <p>We are a team of two Android developers building apps of excellent quality. Our apps have a refined UI and are very reliable, across Android devices, all the time. <a href="https://play.google.com/store/apps/developer?id=Ground+Up+Works">Find them on Google Play.</a></p>
 
 <h2>
-<a name="party-photobooth" class="anchor" href="#party-photobooth"><span class="octicon octicon-link"></span></a>Party PhotoBooth</h2>
+<a id="party-photobooth" class="anchor" href="#party-photobooth" aria-hidden="true"><span class="octicon octicon-link"></span></a>Party PhotoBooth</h2>
 
 <p>Need a photo booth at your event? There is an app for that! What's a better way to explain how it works than to follow this <a href="http://www.instructables.com/id/5-minute-Photo-Booth/">step-by-step instructable</a>?</p>
 
 <h2>
-<a name="flying-photobooth" class="anchor" href="#flying-photobooth"><span class="octicon octicon-link"></span></a>Flying PhotoBooth</h2>
+<a id="flying-photobooth" class="anchor" href="#flying-photobooth" aria-hidden="true"><span class="octicon octicon-link"></span></a>Flying PhotoBooth</h2>
 
 <p>Create, review, save and share photo strips all in less than 30 seconds.</p>
 
 <h1>
-<a name="beta-group" class="anchor" href="#beta-group"><span class="octicon octicon-link"></span></a>beta group</h1>
+<a id="beta-group" class="anchor" href="#beta-group" aria-hidden="true"><span class="octicon octicon-link"></span></a>beta group</h1>
 
 <p>As a reviewer, you will be able to download "release candidate" versions of <a href="https://play.google.com/store/apps/developer?id=Ground+Up+Works">our apps from Google Play</a>, as you would normally download your Android apps. Release candidates are just one step from going public, so we expect them to be very stable software. The purpose for the beta program is to have our apps tested on more devices than we can ever own, and to collect feedback for the new features.</p>
 
 <p>Feedback is completely voluntary and open-ended. Help us build better products by joining <a href="https://groups.google.com/forum/#!forum/guw-beta-reviewers">GUW Beta Reviewers</a>.</p>
 
 <h1>
-<a name="open-source" class="anchor" href="#open-source"><span class="octicon octicon-link"></span></a>open source</h1>
+<a id="open-source" class="anchor" href="#open-source" aria-hidden="true"><span class="octicon octicon-link"></span></a>open source</h1>
 
 <p>We believe in the power of open source. We have benefitted much from open source, and are committed to open sourcing sharable components in what we build. So expect this list to grow :)</p>
 
 <h2>
-<a name="android-google-cloud-print-library" class="anchor" href="#android-google-cloud-print-library"><span class="octicon octicon-link"></span></a>Android Google Cloud Print Library</h2>
+<a id="android-google-cloud-print-library" class="anchor" href="#android-google-cloud-print-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android Google Cloud Print Library</h2>
 
 <p>An Android library to interact with the Google Cloud Print APIs.</p>
 
 <p>This project came about when we needed our apps to silently submit print jobs to GCP. This means without UI implications, such as the dialog that pops up when you print through the Android Print APIs. There is no way around the platform behaviour, and online searches only led to more developers stuck with the same problem when building their kiosk-style apps. So we started this project to build the print APIs that we wish existed with Google Play Services... and yes, you can print silently with this library! <a href="https://github.com/dpsm/android-print">Find it on Github.</a></p>
 
 <h2>
-<a name="android-authentication-library" class="anchor" href="#android-authentication-library"><span class="octicon octicon-link"></span></a>Android Authentication Library</h2>
+<a id="android-authentication-library" class="anchor" href="#android-authentication-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android Authentication Library</h2>
 
 <p>An Android library to facilitate the selection of user accounts from the device and in obtaining Google OAuth tokens from the Google Play Services library. <a href="https://github.com/dpsm/android-auth">Find it on Github.</a></p>
 
 <h2>
-<a name="yksp" class="anchor" href="#yksp"><span class="octicon octicon-link"></span></a>yksp</h2>
+<a id="wings" class="anchor" href="#wings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Wings</h2>
+
+<p>An Android library for silently sharing photos to an extensible set of endpoints.</p>
+
+<p>Wings started off as a component in <a href="https://play.google.com/store/apps/details?id=com.groundupworks.flyingphotobooth">Flying PhotoBooth</a> and <a href="https://play.google.com/store/apps/details?id=com.groundupworks.partyphotobooth">Party PhotoBooth</a>, and has helped us publish photos reliably and efficiently over the years. We are now open-sourcing it because posting a photo should be easy, while integrating with native SDKs of the ever-growing number of service providers is anything but easy... so we hope Wings will take care of that part for you. <a href="http://groundupworks.github.io/wings">Find it on Github.</a></p>
+
+<h2>
+<a id="yksp" class="anchor" href="#yksp" aria-hidden="true"><span class="octicon octicon-link"></span></a>yksp</h2>
 
 <p>A fully Python-based tool that helps you automate Android UI testing and captures everything you need from each test session.</p>
 
 <p>We built this tool to certify each release of our apps across many devices. It takes a few minutes to set up, and ships with our Flying PhotoBooth APK and sample test scripts to get you started. Let's automate our UI tests, let 'em test 'emselves, and spend our time on more important things! <a href="http://benhylau.github.io/yksp/">Find it on Github.</a></p>
 
 <h1>
-<a name="say-hi" class="anchor" href="#say-hi"><span class="octicon octicon-link"></span></a>say hi</h1>
+<a id="say-hi" class="anchor" href="#say-hi" aria-hidden="true"><span class="octicon octicon-link"></span></a>say hi</h1>
 
 <p>Our Facebook Page is where our users unite to request for new features. It's a small group with wonderful discussions going on. <a href="https://www.facebook.com/groundupworks">Join in!</a></p>
 
