Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 <p>We are a team of two Android developers building apps of excellent quality. Our apps have a refined UI and are very reliable, across Android devices, all the time. <a href="https://play.google.com/store/apps/developer?id=Ground+Up+Works">Find them on Google Play.</a></p>
 
 <h2>
+<a id="fency" class="anchor" href="#fency" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fency</h2>
+
+<p>Use our fancy UI to create geo-fences and automatically notify family &amp; friends when you arrive and/or leave a location.</p>
+
+<h2>
 <a id="party-photobooth" class="anchor" href="#party-photobooth" aria-hidden="true"><span class="octicon octicon-link"></span></a>Party PhotoBooth</h2>
 
 <p>Need a photo booth at your event? There is an app for that! What's a better way to explain how it works than to follow this <a href="http://www.instructables.com/id/5-minute-Photo-Booth/">step-by-step instructable</a>?</p>
