Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
+          <blockquote>
+<p>Ground Up Works is made up of a loosely associated group of people with shared values and principles around how to build and deploy technologies. The organization exists to facilitate collaboration through sharing of knowledge and resources so good ideas may become a reality. You can think of Ground Up Works as a virtual collaborative workspace, or just an ongoing hackathon.</p>
+</blockquote>
+
+<h1>
 <a id="our-apps" class="anchor" href="#our-apps" aria-hidden="true"><span class="octicon octicon-link"></span></a>our apps</h1>
 
-<p>We are a team of two Android developers building apps of excellent quality. Our apps have a refined UI and are very reliable, across Android devices, all the time. <a href="https://play.google.com/store/apps/developer?id=Ground+Up+Works">Find them on Google Play.</a></p>
+<p>We build apps of excellent quality. Our apps have a refined UI and are very reliable, across Android devices, all the time. <a href="https://play.google.com/store/apps/developer?id=Ground+Up+Works">Find them on Google Play.</a></p>
 
 <h2>
 <a id="fency" class="anchor" href="#fency" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fency</h2>
@@ -58,7 +62,7 @@
 <h1>
 <a id="open-source" class="anchor" href="#open-source" aria-hidden="true"><span class="octicon octicon-link"></span></a>open source</h1>
 
-<p>We believe in the power of open source. We have benefitted much from open source, and are committed to open sourcing sharable components in what we build. So expect this list to grow :)</p>
+<p>Our design process inevitably leads to the birth of many sharable components, which we believe should be shared with everyone. So expect this list to grow :)</p>
 
 <h2>
 <a id="android-google-cloud-print-library" class="anchor" href="#android-google-cloud-print-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android Google Cloud Print Library</h2>
