Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <h1>
 <a id="open-source" class="anchor" href="#open-source" aria-hidden="true"><span class="octicon octicon-link"></span></a>open source</h1>
 
-<p>Our design process inevitably leads to the birth of many sharable components, which we believe should be shared with everyone. So expect this list to grow :)</p>
+<p>Our design process inevitably leads to the birth of many sharable components, which we believe should be shared with the world. So expect this list to grow :)</p>
 
 <h2>
 <a id="android-google-cloud-print-library" class="anchor" href="#android-google-cloud-print-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android Google Cloud Print Library</h2>
