Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
 <p>We build apps of excellent quality. Our apps have a refined UI and are very reliable, across Android devices, all the time. <a href="https://play.google.com/store/apps/developer?id=Ground+Up+Works">Find them on Google Play.</a></p>
 
 <h2>
-<a id="fency" class="anchor" href="#fency" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fency</h2>
-
-<p>Use our fancy UI to create geo-fences and automatically notify family &amp; friends when you arrive and/or leave a location.</p>
-
-<h2>
 <a id="party-photobooth" class="anchor" href="#party-photobooth" aria-hidden="true"><span class="octicon octicon-link"></span></a>Party PhotoBooth</h2>
 
 <p>Need a photo booth at your event? There is an app for that! What's a better way to explain how it works than to follow this <a href="http://www.instructables.com/id/5-minute-Photo-Booth/">step-by-step instructable</a>?</p>
@@ -51,6 +46,11 @@
 <a id="flying-photobooth" class="anchor" href="#flying-photobooth" aria-hidden="true"><span class="octicon octicon-link"></span></a>Flying PhotoBooth</h2>
 
 <p>Create, review, save and share photo strips all in less than 30 seconds.</p>
+
+<h2>
+<a id="fency" class="anchor" href="#fency" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fency</h2>
+
+<p>Use our fancy UI to create geo-fences that send an automated text to family &amp; friends when you arrive.</p>
 
 <h1>
 <a id="beta-group" class="anchor" href="#beta-group" aria-hidden="true"><span class="octicon octicon-link"></span></a>beta group</h1>
@@ -65,18 +65,6 @@
 <p>Our design process inevitably leads to the birth of many sharable components, which we believe should be shared with the world. So expect this list to grow :)</p>
 
 <h2>
-<a id="android-google-cloud-print-library" class="anchor" href="#android-google-cloud-print-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android Google Cloud Print Library</h2>
-
-<p>An Android library to interact with the Google Cloud Print APIs.</p>
-
-<p>This project came about when we needed our apps to silently submit print jobs to GCP. This means without UI implications, such as the dialog that pops up when you print through the Android Print APIs. There is no way around the platform behaviour, and online searches only led to more developers stuck with the same problem when building their kiosk-style apps. So we started this project to build the print APIs that we wish existed with Google Play Services... and yes, you can print silently with this library! <a href="https://github.com/dpsm/android-print">Find it on Github.</a></p>
-
-<h2>
-<a id="android-authentication-library" class="anchor" href="#android-authentication-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android Authentication Library</h2>
-
-<p>An Android library to facilitate the selection of user accounts from the device and in obtaining Google OAuth tokens from the Google Play Services library. <a href="https://github.com/dpsm/android-auth">Find it on Github.</a></p>
-
-<h2>
 <a id="wings" class="anchor" href="#wings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Wings</h2>
 
 <p>An Android library for silently sharing photos to an extensible set of endpoints.</p>
@@ -84,11 +72,23 @@
 <p>Wings started off as a component in <a href="https://play.google.com/store/apps/details?id=com.groundupworks.flyingphotobooth">Flying PhotoBooth</a> and <a href="https://play.google.com/store/apps/details?id=com.groundupworks.partyphotobooth">Party PhotoBooth</a>, and has helped us publish photos reliably and efficiently over the years. We are now open-sourcing it because posting a photo should be easy, while integrating with native SDKs of the ever-growing number of service providers is anything but easy... so we hope Wings will take care of that part for you. <a href="http://groundupworks.github.io/wings">Find it on Github.</a></p>
 
 <h2>
+<a id="android-google-cloud-print-library" class="anchor" href="#android-google-cloud-print-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android Google Cloud Print Library</h2>
+
+<p>An Android library to interact with the Google Cloud Print APIs.</p>
+
+<p>This project came about when we needed our apps to silently submit print jobs to GCP. This means without UI implications, such as the dialog that pops up when you print through the Android Print APIs. There is no way around the platform behaviour, and online searches only led to more developers stuck with the same problem when building their kiosk-style apps. So we started this project to build the print APIs that we wish existed with Google Play Services... and yes, you can print silently with this library! <a href="https://github.com/groundupworks/android-print">Find it on Github.</a></p>
+
+<h2>
+<a id="android-authentication-library" class="anchor" href="#android-authentication-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android Authentication Library</h2>
+
+<p>An Android library to facilitate the selection of user accounts from the device and in obtaining Google OAuth tokens from the Google Play Services library. <a href="https://github.com/groundupworks/android-auth">Find it on Github.</a></p>
+
+<h2>
 <a id="yksp" class="anchor" href="#yksp" aria-hidden="true"><span class="octicon octicon-link"></span></a>yksp</h2>
 
 <p>A fully Python-based tool that helps you automate Android UI testing and captures everything you need from each test session.</p>
 
-<p>We built this tool to certify each release of our apps across many devices. It takes a few minutes to set up, and ships with our Flying PhotoBooth APK and sample test scripts to get you started. Let's automate our UI tests, let 'em test 'emselves, and spend our time on more important things! <a href="http://benhylau.github.io/yksp/">Find it on Github.</a></p>
+<p>We built this tool to certify each release of our apps across many devices. It takes a few minutes to set up, and ships with our Flying PhotoBooth APK and sample test scripts to get you started. Let's automate our UI tests, let 'em test 'emselves, and spend our time on more important things! <a href="https://github.com/groundupworks/yksp">Find it on Github.</a></p>
 
 <h1>
 <a id="say-hi" class="anchor" href="#say-hi" aria-hidden="true"><span class="octicon octicon-link"></span></a>say hi</h1>
