Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,22 +38,25 @@
 <p>We build apps of excellent quality. Our apps have a refined UI and are very reliable, across Android devices, all the time. <a href="https://play.google.com/store/apps/developer?id=Ground+Up+Works">Find them on Google Play.</a></p>
 
 <h2>
-<a id="party-photobooth-" class="anchor" href="#party-photobooth-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Party PhotoBooth <a href="https://play.google.com/store/apps/details?id=com.groundupworks.partyphotobooth&amp;utm_source=global_co&amp;utm_medium=prtnr&amp;utm_content=Mar2515&amp;utm_campaign=PartBadge&amp;pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" height="24px"></a>
-</h2>
+<a id="party-photobooth" class="anchor" href="#party-photobooth" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Party PhotoBooth</h2>
 
 <p>Need a photo booth at your event? There is an app for that! What's a better way to explain how it works than to follow this <a href="http://www.instructables.com/id/5-minute-Photo-Booth/">step-by-step instructable</a>?</p>
 
+<p><a href="https://play.google.com/store/apps/details?id=com.groundupworks.partyphotobooth&amp;utm_source=global_co&amp;utm_medium=prtnr&amp;utm_content=Mar2515&amp;utm_campaign=PartBadge&amp;pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" height="24px"></a></p>
+
 <h2>
-<a id="flying-photobooth-" class="anchor" href="#flying-photobooth-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Flying PhotoBooth <a href="https://play.google.com/store/apps/details?id=com.groundupworks.flyingphotobooth&amp;utm_source=global_co&amp;utm_medium=prtnr&amp;utm_content=Mar2515&amp;utm_campaign=PartBadge&amp;pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" height="24px"></a>
-</h2>
+<a id="flying-photobooth" class="anchor" href="#flying-photobooth" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Flying PhotoBooth</h2>
 
 <p>Create, review, save and share photo strips all in less than 30 seconds.</p>
 
+<p><a href="https://play.google.com/store/apps/details?id=com.groundupworks.flyingphotobooth&amp;utm_source=global_co&amp;utm_medium=prtnr&amp;utm_content=Mar2515&amp;utm_campaign=PartBadge&amp;pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" height="24px"></a></p>
+
 <h2>
-<a id="fency-" class="anchor" href="#fency-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fency <a href="https://play.google.com/store/apps/details?id=com.groundupworks.fency&amp;utm_source=global_co&amp;utm_medium=prtnr&amp;utm_content=Mar2515&amp;utm_campaign=PartBadge&amp;pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" height="24px"></a>
-</h2>
+<a id="fency" class="anchor" href="#fency" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fency</h2>
 
 <p>Use our fancy UI to create geo-fences that send an automated text to family &amp; friends when you arrive.</p>
+
+<p><a href="https://play.google.com/store/apps/details?id=com.groundupworks.fency&amp;utm_source=global_co&amp;utm_medium=prtnr&amp;utm_content=Mar2515&amp;utm_campaign=PartBadge&amp;pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" height="24px"></a></p>
 
 <h1>
 <a id="beta-group" class="anchor" href="#beta-group" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>beta group</h1>
@@ -68,30 +71,31 @@
 <p>We believe software projects should be accessible, forkable, and sustainable. They should be made available for anyone to use, modify, and distribute. Sources for our <a href="https://en.wikipedia.org/wiki/Free_software_movement">free and open source (FOSS)</a> software are <a href="https://github.com/groundupworks/">available on our Github</a>, licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a> or <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a>.</p>
 
 <h2>
-<a id="android-authentication-library-star" class="anchor" href="#android-authentication-library-star" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Android Authentication Library <a href="https://github.com/groundupworks/android-auth">Star</a>
-</h2>
+<a id="android-authentication-library" class="anchor" href="#android-authentication-library" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Android Authentication Library</h2>
 
 <p>An Android library to facilitate the selection of user accounts from the device and in obtaining Google OAuth tokens from the Google Play Services library. <a href="https://github.com/groundupworks/android-auth">Find it on Github.</a></p>
 
 <h2>
-<a id="android-google-cloud-print-library-star" class="anchor" href="#android-google-cloud-print-library-star" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Android Google Cloud Print Library <a href="https://github.com/groundupworks/android-print">Star</a>
-</h2>
+<a id="android-google-cloud-print-library" class="anchor" href="#android-google-cloud-print-library" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Android Google Cloud Print Library</h2>
 
 <p>An Android library to interact with the Google Cloud Print APIs.</p>
 
 <p>This project came about when we needed our apps to silently submit print jobs to GCP. This means without UI implications, such as the dialog that pops up when you print through the Android Print APIs. There is no way around the platform behaviour, and online searches only led to more developers stuck with the same problem when building their kiosk-style apps. So we started this project to build the print APIs that we wish existed with Google Play Services... and yes, you can print silently with this library! <a href="https://github.com/groundupworks/android-print">Find it on Github.</a></p>
 
 <h2>
-<a id="wings-star" class="anchor" href="#wings-star" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wings <a href="https://github.com/groundupworks/wings">Star</a>
-</h2>
+<a id="flying-photobooth--party-photobooth" class="anchor" href="#flying-photobooth--party-photobooth" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Flying PhotoBooth &amp; Party PhotoBooth</h2>
+
+<p>The source code for the Android photo booth applications. <a href="https://github.com/groundupworks/flying-photo-booth">Find it on Github.</a></p>
+
+<h2>
+<a id="wings" class="anchor" href="#wings" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wings</h2>
 
 <p>An Android library for silently sharing photos to an extensible set of endpoints.</p>
 
 <p>Wings started off as a component in <a href="https://play.google.com/store/apps/details?id=com.groundupworks.flyingphotobooth">Flying PhotoBooth</a> and <a href="https://play.google.com/store/apps/details?id=com.groundupworks.partyphotobooth">Party PhotoBooth</a>, and has helped us publish photos reliably and efficiently over the years. We are now open-sourcing it because posting a photo should be easy, while integrating with native SDKs of the ever-growing number of service providers is anything but easy... so we hope Wings will take care of that part for you. <a href="http://groundupworks.github.io/wings">Find it on Github.</a></p>
 
 <h2>
-<a id="yksp-star" class="anchor" href="#yksp-star" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>yksp <a href="https://github.com/groundupworks/yksp">Star</a>
-</h2>
+<a id="yksp" class="anchor" href="#yksp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>yksp</h2>
 
 <p>A fully Python-based tool that helps you automate Android UI testing and captures everything you need from each test session.</p>
 
@@ -103,8 +107,6 @@
 <p>Our Facebook Page is where our users unite to request for new features. It's a small group with wonderful discussions going on. <a href="https://www.facebook.com/groundupworks">Join in!</a></p>
 
 <p>Not on? No problem. <a href="mailto:ground.up.works@gmail.com">Email us to get in touch!</a></p>
-
-
         </section>
 
         <aside id="sidebar">
