Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <h1>
 <a id="foss" class="anchor" href="#foss" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>foss</h1>
 
-<p>We believe software projects should be accessible, forkable, and sustainable. They should be made available for anyone to use, modify, and distribute. Sources for our <a href="https://en.wikipedia.org/wiki/Free_software_movement">free and open source (FOSS)</a> software are <a href="https://github.com/groundupworks/">available on our Github</a>, licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a> or <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a>.</p>
+<p>We believe software projects should be accessible, forkable, and sustainable. They should be made available for anyone to use, modify, and distribute. Sources for our <a href="https://en.wikipedia.org/wiki/Free_software_movement">free and open-source software (FOSS)</a> are <a href="https://github.com/groundupworks/">available on our Github</a>, licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a> or <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a>.</p>
 
 <h2>
 <a id="android-authentication-library" class="anchor" href="#android-authentication-library" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Android Authentication Library</h2>
@@ -82,21 +82,23 @@
 <h2>
 <a id="flying-photobooth--party-photobooth" class="anchor" href="#flying-photobooth--party-photobooth" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Flying PhotoBooth &amp; Party PhotoBooth</h2>
 
-<p>The source code for the Android photo booth applications. <a href="https://github.com/groundupworks/flying-photo-booth">Find it on Github.</a></p>
+<p>The source code for the Android photo booth applications.</p>
+
+<p>Flying PhotoBooth started back in 2012 as my hobby project to play with the Android camera APIs and to experiment with new UX flow on a mobile device. The goal was to create and publish a photo strip with the least user interactions. From that, the swipe-to-retake and <a href="http://www.groundupworks.com/wings/">Wings auto-sharing</a> features were born. Then I needed a photo booth setup at my wedding, which materialized into Party PhotoBooth, featuring kiosk mode with a tablet-optimized and step-by-step UI for guest interactions. As the only Android application catering to this use case, Party PhotoBooth is welcomed by a wonderful community of DIY wedding couples, photographers, professional event planners, and parents professionally planning for their children's birthday parties. There has been many suggestions for new features, translations, customizations, and use cases; some of which I was able to add, others I haven't yet had time for or are beyond the scope of Party PhotoBooth. So the time has come to publish the source code and let everyone do what they want with it under the terms of the GPLv3. Upstreaming pull requests are of course welcomed :) <a href="https://github.com/groundupworks/flying-photo-booth">Find it on Github.</a></p>
 
 <h2>
 <a id="wings" class="anchor" href="#wings" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wings</h2>
 
 <p>An Android library for silently sharing photos to an extensible set of endpoints.</p>
 
-<p>Wings started off as a component in <a href="https://play.google.com/store/apps/details?id=com.groundupworks.flyingphotobooth">Flying PhotoBooth</a> and <a href="https://play.google.com/store/apps/details?id=com.groundupworks.partyphotobooth">Party PhotoBooth</a>, and has helped us publish photos reliably and efficiently over the years. We are now open-sourcing it because posting a photo should be easy, while integrating with native SDKs of the ever-growing number of service providers is anything but easy... so we hope Wings will take care of that part for you. <a href="http://groundupworks.github.io/wings">Find it on Github.</a></p>
+<p>Wings started off as a component in <a href="https://play.google.com/store/apps/details?id=com.groundupworks.flyingphotobooth">Flying PhotoBooth</a> and <a href="https://play.google.com/store/apps/details?id=com.groundupworks.partyphotobooth">Party PhotoBooth</a>, and has helped us publish photos reliably and efficiently over the years. We are now open-sourcing it because posting a photo should be easy, while integrating with native SDKs of the ever-growing number of service providers is anything but easy... so we hope Wings will take care of that part for you. <a href="http://www.groundupworks.com/wings/">Find it on Github.</a></p>
 
 <h2>
 <a id="yksp" class="anchor" href="#yksp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>yksp</h2>
 
 <p>A fully Python-based tool that helps you automate Android UI testing and captures everything you need from each test session.</p>
 
-<p>We built this tool to certify each release of our apps across many devices. It takes a few minutes to set up, and ships with our Flying PhotoBooth APK and sample test scripts to get you started. Let's automate our UI tests, let 'em test 'emselves, and spend our time on more important things! <a href="https://github.com/groundupworks/yksp">Find it on Github.</a></p>
+<p>We built this tool to certify each release of our apps across many devices. It takes a few minutes to set up, and ships with our Flying PhotoBooth APK and sample test scripts to get you started. Let's automate our UI tests, let 'em test 'emselves, and spend our time on more important things! <a href="http://www.groundupworks.com/yksp/">Find it on Github.</a></p>
 
 <h1>
 <a id="say-hi" class="anchor" href="#say-hi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>say hi</h1>
